fixed logo alignment issue

--- a/frontend/src/styles/App.module.css
+++ b/frontend/src/styles/App.module.css
@@ -31,7 +31,6 @@ body{
 
 .smallerLogo {
     height: 15%;
-    margin-top: -20%;
 }
 
 .hoverOver {
